--- a/UI/src/dashboard/search/search.scss
+++ b/UI/src/dashboard/search/search.scss
@@ -11,6 +11,7 @@
     }
 }
 
+
 .panel{
     width: 790px;
     // width: 730px;
@@ -36,6 +37,21 @@
             top: 3px;
             right: 5px;
             width: 20px;
+        }
+    }
+    .rowSort{
+        margin: 5px 15px 5px 5px;
+        text-align: right;
+        .sort{
+            background-color: #464a5f;
+            border-radius: 3px;
+            padding-right: 5px;
+            padding-left: 5px;
+            outline: none;
+            border: none;
+            height: 20px;
+            margin-top: 5px;
+            color: #FFFFFF;
         }
     }
     .alert{
