--- a/UI/src/dashboard/settings/resource.scss
+++ b/UI/src/dashboard/settings/resource.scss
@@ -12,7 +12,7 @@
     display: flex;
     flex-direction: column;
     margin: 10px;
-    width: calc(100% - 20px);
+    width: calc(100%-20px);
     height: 100%;
     /*overflow: scroll;*/
     
@@ -57,7 +57,7 @@
       padding-top: 10px;
       .left,.right{
         height: 100%;
-        width: 50%;
+        width: 100%;
         position: relative;
       }
       .left{
@@ -69,7 +69,7 @@
         padding-left: 10px;
       }
       .width{
-        width: 89%;
+        width: 100%;
       }
       .time{
         margin-top: 3px;
