--- a/UI/src/dashboard/settings/resource.scss
+++ b/UI/src/dashboard/settings/resource.scss
@@ -7,7 +7,7 @@
   flex-direction: column;
   font-family: $font-primary;
   height: 100%;
-  background-color: #293043;
+  background-color: #161923;
   .content{
     display: flex;
     flex-direction: column;
@@ -22,12 +22,12 @@
     	color: white;
 	padding: 0 6px;
      }
-
     .submitBtn{
 	 text-align: right;
-   	 padding-top: 6px;
+   	 padding-top: 15px;
    	 padding-right: 5px;
-
+     font-size: 12pt;
+     padding-left: 65px;
     }
 
     .input{
