--- a/UI/src/dashboard/reservationBar/cardDescription.scss
+++ b/UI/src/dashboard/reservationBar/cardDescription.scss
@@ -63,7 +63,7 @@
             }
         }
         .content{
-            display: inline-flex;
+            display: flex;
             flex-direction: row;
             padding: 10px;
             .column{
