--- a/UI/src/dashboard/settings/resource.scss
+++ b/UI/src/dashboard/settings/resource.scss
@@ -30,7 +30,7 @@
      padding-left: 65px;
     }
 
-    .input{
+    .input,.inputmulti{
             background-color: #464a5f;
             border-radius: 3px;
             /*padding-right: 5px;*/
@@ -40,8 +40,29 @@
             height: 20px;
             margin-top: 5px;
             color: #FFFFFF;
-    }
 
+    }
+    .inputmulti{
+            width: 100%;
+            height: 60px;
+            padding-top: 5px;
+            padding-bottom: 5px;
+               
+    }
+    .inputmulti::-webkit-scrollbar-track{
+            border-radius: 3px;
+            background-color: rgba(35,41,57,0.84);
+    }
+    .inputmulti::-webkit-scrollbar{
+            width: 10px;
+            border-radius: 3px;
+            background-color: rgba(35,41,57,0.84);
+    }
+    .inputmulti::-webkit-scrollbar-thumb{
+            border-radius: 3px;
+            background-color: #EFA430;
+    
+    }
 
     .top{
       display: flex;
